traversal.zigzag.traversalzigzag.TraversalZigZag.scala.error
Compilation error:
TraversalZigZag:25: error: reassignment to val
    y=y+1
     ^