traversal.zigzag.traversalzigzag.TraversalZigZag.scala.code
override def run() {
  var y:Int=0;
  var count:Int=0;
  
  for(i<- 1 to 3){
    colonne(y);
    colonneInverse(y)
  }
  def colonne(y:Int){
  	var x:Int=0
  	while(x!=getWorldHeight()){
    	setPos(x,y);
    	writeMessage(count);
    	x=x+1;
    	count=count+1;
  	}
 }
  def colonneInverse(y:Int){
    var x:Int=6
    while(x!=0){
      setPos(x,y);
      writeMessage(count);
      x=x-1;
      count=count+1
    }
    y=y+1
  }
}
